# Grace

./: .env.example  .gitignore  README.md  SUBMISSION_VERSION.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml  entity_kg_bm25.yaml  entity_kg_gnn.yaml  entity_kg_ppr.yaml  entity_kg_sbert.yaml  sentence_graph_bm25.yaml  sentence_graph_gnn.yaml  sentence_graph_ppr.yaml  sentence_graph_sbert.yaml
experiments/: results_summary.md
scripts/: eval_gnn_retrieval.py  eval_retrievers.py  extract_failure_cases.py  install_torch_pyg.sh  plot_pareto.py  run_all_experiments.sh  run_full_eval.py  run_smoke.sh  setup_grace_env.sh  test_bm25.py  test_qa_smoke.py  train_gnn.py  tune_answer_pack.py  verify_data.py
src/grace/: __init__.py  schema.py
src/grace/datasets/: __init__.py  graph_dataset.py  locomo.py  longmemeval.py
src/grace/eval/: __init__.py  by_type.py  retrieval_metrics.py
src/grace/graphs/: __init__.py  build.py
src/grace/models/: __init__.py  query_gnn.py
src/grace/qa/: __init__.py  judge.py  reader.py
src/grace/retrievers/: __init__.py  bm25.py  gnn.py  ppr.py  sbert.py
src/grace/utils/: __init__.py  config.py  llm_client.py  seed.py
